drap n drop Image Selector - removed min width and height to fix cropping snap issue, removed ReactCrop padding to allow entire image crop

--- a/civictechprojects/static/css/partials/_FileSelectButton.scss
+++ b/civictechprojects/static/css/partials/_FileSelectButton.scss
@@ -19,6 +19,7 @@
         left: 0;
         width: 100%;
         height: 100%;
+        border-radius: 10px;
     }
     &.FileSelectButton-imagePreview {
         width:300px;
